--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,11 +25,11 @@ jacocoAndroidUnitTestReport {
 }
 
 android {
-    compileSdkVersion 27
-
+    compileSdkVersion 28
+    buildToolsVersion = '28.0.3'
     defaultConfig {
         applicationId "edu.luc.etl.cs313.android.stopwatch"
-        minSdkVersion 15
+        minSdkVersion 24
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -64,16 +64,15 @@ android {
 
 dependencies {
     implementation 'junit:junit:4.12'
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'net.sourceforge.streamsupport:streamsupport:1.5.2'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
     // several duplications on account of shared testcase superclass
     testImplementation 'junit:junit:4.12'
     testImplementation 'com.android.support.test:rules:1.0.2'
     testImplementation 'org.robolectric:robolectric:4.3'
     testImplementation 'org.bouncycastle:bcprov-jdk15on:1.62'
-    testImplementation 'com.android.support:appcompat-v7:27.1.1'
+    testImplementation 'com.android.support:appcompat-v7:28.0.0'
     androidTestImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support:appcompat-v7:27.1.1'
+    androidTestImplementation 'com.android.support:appcompat-v7:28.0.0'
     androidTestImplementation 'com.android.support.test:rules:1.0.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
 }
